# ptf-analysis

./: .gitignore  README.md  pyproject.toml  root2hdf5.py
src/: aux.py  plot_isotropy.py  plot_pmt_waveforms.py  root2hdf5.py
src/plotting/: plot_isotropy.py  plot_pmt_waveforms.py
src/ptf_analysis/: aux.py  root2hdf5.py
src/ptf_analysis/isotropy/: export_data.py  main.py  notes.txt  plot.py  plot_backup.py  plot_data_sims.py
